# forgy

./: .gitattributes  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: main.rs  remote_write.rs
tests/: docker-compose.yml  k6-loader.js  prometheus.yml  server.ts
